--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,6 +33,7 @@ h4 {
   color: white;
   background-image: url(../images/the-flatiron-building.png);
   background-position: center;
+  background-repeat: no-repeat;
 }
 .footer {
   font-size: 11px;
